--- a/client/src/components/Layout.module.scss
+++ b/client/src/components/Layout.module.scss
@@ -5,12 +5,7 @@
   flex-wrap: wrap;
   min-height: 100vh;
 
-  .logo {
-    width: 300px;
-    margin-top: 1rem;
-  }
-
-  .menu {
+  .children {
     display: flex;
     flex-direction: column;
     align-items: center;
